syntax = "proto3";

option java_package = "org.example";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Log {
  string usr_id = 1;
  string log_text = 2;
}

message LoggedLog {
  Log log = 1;
  int32 line_number = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ListLoggedLog { repeated LoggedLog logs = 1; }

service LogService {
  rpc AddLog(stream Log) returns (google.protobuf.Empty);
  rpc GetLog(google.protobuf.Empty) returns (ListLoggedLog);
  rpc ListenLog(google.protobuf.Empty) returns (stream LoggedLog);
  rpc UnlistenLog(google.protobuf.Empty) returns (google.protobuf.Empty);
}
